user message alignment fix to be at the right

--- a/src/components/ChatMessage.css
+++ b/src/components/ChatMessage.css
@@ -4,7 +4,7 @@
 }
 
 .user-message{
-    margin-left: auto;
+    margin-left: auto
 }
 
 .chatbot-pfp,
